[package]
name = "id_by_ringtone"
version = "0.1.0"
authors = ["Kohei Fukunaga <kyuta3579@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]
version = "0.7.2"